# ti85emu

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  konfik.h  reconf
src/: Makefile.am  Makefile.in  fltk.c  fltk.h  gtk.c  icons.h  main.c  ti85.c  ti85.h
src/MSX/: Codes.h  CodesCB.h  CodesED.h  CodesXCB.h  CodesXX.h  Makefile.am  Makefile.in  Tables.h  Z80.c  Z80.h
src/Xpm/: _2nd.xpm  alpha.xpm  clear.xpm  comma.xpm  cos.xpm  custom.xpm  del.xpm  div.xpm  dot.xpm  down.xpm  ee.xpm  eight.xpm  enter.xpm  exit.xpm  f1.xpm  f2.xpm  f3.xpm  f4.xpm  f5.xpm  five.xpm  four.xpm  graph.xpm  left.xpm  ln.xpm  log.xpm  minus.xpm  more.xpm  mul.xpm  nine.xpm  on.xpm  one.xpm  parleft.xpm  parright.xpm  plus.xpm  power2.xpm  powerby.xpm  prgm.xpm  right.xpm  seven.xpm  sign.xpm  (+10 more)
